--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ main {
 }
 
 nav {
+    width: 100%;
     background-color: beige;
     padding: 10px;
 }
@@ -73,6 +74,10 @@ nav a:hover {
     padding: 20px;
     margin: 10px;
 }
+.service {
+    display: inline-block;
+    text-align: center;
+}
 
 table {
     border: 3px solid black;
@@ -83,4 +88,8 @@ td,
 th {
     border: 1px solid black;
     padding: 5px;
+}
+.service {
+    display: inline-block;
+    text-align: center;
 }
